Fix button alignment.

--- a/src/css/stonedaudio.styl
+++ b/src/css/stonedaudio.styl
@@ -249,13 +249,7 @@ section
     position: relative
 
     h3
-      line-height: 2em
-
-    +below(500px)
-      top: 2px
-
-      h3
-        line-height: .5em
+      margin-top: -4px
 
     &:hover
       animation: ripple-white 1.5s infinite
